cft.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy Cisco Threat Defense Virtual on AWS

Parameters:
  InstanceType:
    Type: String
    Default: c4.xlarge
    Description: EC2 instance type for the Threat Defense Virtual

Resources:
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Cisco Threat Defense Virtual
      VpcId: vpc-0c76828a972f5e72a  #  VPC ID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0  # SSH access
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0  #  HTTPS access

  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: ami-xxxxxx  #  AMI ID for Cisco Threat Defense Virtual
      SubnetId: subnet-0499d3c4c8c9bc9a1  #  subnet ID
      SecurityGroupIds:
        - !Ref MySecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          echo '#Sensor' >> /etc/config.yaml
          echo '{' >> /etc/config.yaml
          echo '    "AdminPassword": "<your_password>",' >> /etc/config.yaml
          echo '    "Hostname": "<your_hostname>",' >> /etc/config.yaml
          echo '    "ManageLocally": "Yes"' >> /etc/config.yaml
          echo '}' >> /etc/config.yaml

      NetworkInterfaces:
        - AssociatePublicIpAddress: 'true'  # Enable auto-generation of public IPv4 addresses
          DeviceIndex: '0'  # eth0
          SubnetId: subnet-0499d3c4c8c9bc9a1  # Subnet for eth0
        - AssociatePublicIpAddress: 'true'  # Enable auto-generation of public IPv4 addresses
          DeviceIndex: '1'  # eth1
          SubnetId: subnet-0499d3c4c8c9bc9a1  # Subnet for eth1

Outputs:
  InstanceId:
    Description: ID of the deployed Threat Defense Virtual instance
    Value: !Ref MyEC2Instance
